# EmbodiedLearningProject

./: .gitignore  Data_format.json  README.md  pyproject.toml
.dvc/: config
data/: .gitignore  Oct12TestWithGrads.dvc
elp/: __init__.py  _logger.py  gaze_processor.py  log_processor.py  utils.py
pipes/: 2023-07-13-video-audio-pipeline-final.json  2023-07-13-video-audio-pipeline-local.json  2023-07-13-video-audio-pipeline-single.json  2023-07-13-video-audio-pipeline.json  2023-07-13-video-pipeline-local.json  test_config.py
pipes/cp-logs/chimerapy-2023_07_13_12_53_34-5704/: meta.json
pipes/cp-logs/chimerapy-2023_07_13_12_57_48-3427/: meta.json
pipes/cp-logs/chimerapy-2023_07_13_13_03_37-6979/: meta.json
pipes/cp-logs/chimerapy-2023_07_13_13_04_55-6913/: meta.json
pipes/cp-logs/chimerapy-2023_07_13_13_07_10-3684/: meta.json
scripts/: Data_SSMVSpring23.json  PositionsVisualization.ipynb  correct_day13_screen_recording.ipynb  game_mechanism_day13.ipynb  game_reconstruction.ipynb  state_action_sequence_generation.ipynb  time_alignment.ipynb
scripts/gaze/: copy_file_script.py  depth_estimation.ipynb  final_merge.ipynb  gaze_estimation.ipynb  reconstruction3d.ipynb  reid.ipynb
scripts/logs/: check_data.ipynb  game_mechanism_day13.ipynb  game_reconstruction.ipynb  state_action_sequence_generation.ipynb  time_alignment.ipynb
test/: conftest.py  spring.py  test_3d_filtering.py  test_filtering.py  test_gaze_processing.py  test_logs_processing.py
